import { describe, it, expect } from 'vitest';
import { join } from 'node:path';
import { analyzeRepo } from '../../src/analyzers/registry.js';
import { generatePipeline } from '../../src/generators/registry.js';
import { GitlabCiRenderer } from '../../src/renderers/gitlab-ci.js';
import { fromYaml } from '../../src/utils/yaml.js';

const FIXTURES = join(import.meta.dirname, '../fixtures');
const renderer = new GitlabCiRenderer();

async function renderFixture(fixture: string): Promise<string> {
  const manifest = await analyzeRepo(join(FIXTURES, fixture));
  return renderer.render(generatePipeline(manifest));
}

// ── Snapshot tests ────────────────────────────────────────────────────────────

describe('GitlabCiRenderer snapshots', () => {
  it('renders node-basic', async () => {
    expect(await renderFixture('node-basic')).toMatchSnapshot();
  });

  it('renders python-fastapi', async () => {
    expect(await renderFixture('python-fastapi')).toMatchSnapshot();
  });

  it('renders go-service', async () => {
    expect(await renderFixture('go-service')).toMatchSnapshot();
  });
});

// ── Structural assertions ─────────────────────────────────────────────────────

describe('GitlabCiRenderer structure', () => {
  it('produces valid YAML that parses correctly', async () => {
    const yaml = await renderFixture('node-basic');
    const body = yaml.split('\n').filter((l) => !l.startsWith('#')).join('\n');
    expect(() => fromYaml(body)).not.toThrow();
  });

  it('includes the generated-by header comment', async () => {
    const yaml = await renderFixture('node-basic');
    expect(yaml).toContain('Generated by pipeline-gen');
  });

  it('outputs to .gitlab-ci.yml', () => {
    expect(renderer.outputPath({} as never)).toBe('.gitlab-ci.yml');
  });

  it('emits a stages: list', async () => {
    const yaml = await renderFixture('node-basic');
    expect(yaml).toContain('stages:');
  });

  it('emits needs: for dependent stages (DAG)', async () => {
    // node-basic: build depends on test
    const yaml = await renderFixture('node-basic');
    expect(yaml).toContain('needs:');
  });

  it('infers a Docker image for Node jobs', async () => {
    const yaml = await renderFixture('node-basic');
    expect(yaml).toMatch(/image: node:/);
  });

  it('infers a Docker image for Python jobs', async () => {
    const yaml = await renderFixture('python-fastapi');
    expect(yaml).toMatch(/image: python:/);
  });

  it('infers a Docker image for Go jobs', async () => {
    const yaml = await renderFixture('go-service');
    expect(yaml).toMatch(/image: golang:/);
  });

  it('converts gitleaks action to a shell script entry', async () => {
    const yaml = await renderFixture('node-basic');
    expect(yaml).toContain('gitleaks detect');
  });

  it('skips the checkout action (implicit in GitLab)', async () => {
    const yaml = await renderFixture('node-basic');
    expect(yaml).not.toContain('actions/checkout');
  });

  it('emits parallel.matrix for node version matrix', async () => {
    const yaml = await renderFixture('node-basic');
    expect(yaml).toContain('parallel:');
    expect(yaml).toContain('NODE_VERSION');
  });

  it('emits parallel.matrix for python version matrix', async () => {
    const yaml = await renderFixture('python-fastapi');
    expect(yaml).toContain('PYTHON_VERSION');
  });

  it('includes rules: matching pipeline triggers', async () => {
    const yaml = await renderFixture('node-basic');
    expect(yaml).toContain('rules:');
    expect(yaml).toContain('CI_COMMIT_BRANCH');
    expect(yaml).toContain('merge_request_event');
  });

  it('emits cache: blocks for jobs with cache config', async () => {
    const yaml = await renderFixture('node-basic');
    expect(yaml).toContain('cache:');
  });

  it('emits script: entries for run steps', async () => {
    const yaml = await renderFixture('node-basic');
    expect(yaml).toContain('npm ci');
  });
});
