// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`GitlabCiRenderer snapshots > renders go-service 1`] = `
"# Generated by pipeline-gen — https://github.com/NickSanft/pipeline-gen
# Do not edit manually. Re-run \`pipeline-gen generate\` to update.
stages:
  - check
  - test
  - build
vet-and-lint:
  image: golang:alpine
  stage: check
  timeout: 15 minutes
  cache:
    key: $CI_COMMIT_REF_SLUG
    paths: &a1
      - ~/go/pkg/mod
      - ~/.cache/go-build
    policy: pull-push
  script:
    - gitleaks detect --source=. --exit-code=1 --no-git
    - go mod download
    - go mod verify
    - go vet ./...
    - go install github.com/golangci/golangci-lint/cmd/golangci-lint@latest
    - golangci-lint run ./...
  rules:
    - if: $CI_COMMIT_BRANCH == "main"
    - if: $CI_PIPELINE_SOURCE == "merge_request_event"
unit-tests:
  image: golang:alpine
  stage: test
  needs:
    - job: vet-and-lint
  timeout: 20 minutes
  cache:
    key: $CI_COMMIT_REF_SLUG
    paths: *a1
    policy: pull-push
  script:
    - go mod download
    - go test -race -coverprofile=coverage.out -covermode=atomic ./...
    - go tool cover -func=coverage.out
  rules:
    - if: $CI_COMMIT_BRANCH == "main"
    - if: $CI_PIPELINE_SOURCE == "merge_request_event"
build-binary:
  image: golang:alpine
  stage: build
  needs:
    - job: unit-tests
  timeout: 15 minutes
  cache:
    key: $CI_COMMIT_REF_SLUG
    paths: *a1
    policy: pull-push
  script:
    - go build -v -ldflags="-s -w" ./...
    - go install golang.org/x/vuln/cmd/govulncheck@latest && govulncheck ./...
  rules:
    - if: $CI_COMMIT_BRANCH == "main"
    - if: $CI_PIPELINE_SOURCE == "merge_request_event"
"
`;

exports[`GitlabCiRenderer snapshots > renders node-basic 1`] = `
"# Generated by pipeline-gen — https://github.com/NickSanft/pipeline-gen
# Do not edit manually. Re-run \`pipeline-gen generate\` to update.
stages:
  - test
  - build
  - publish
unit-tests:
  image: node:\${NODE_VERSION}
  stage: test
  timeout: 20 minutes
  parallel:
    matrix:
      - NODE_VERSION:
          - "20"
          - "22"
  cache:
    key: $CI_COMMIT_REF_SLUG
    paths:
      - ~/.npm
    policy: pull-push
  script:
    - gitleaks detect --source=. --exit-code=1 --no-git
    - npm ci
    - npm run lint
    - npm audit --audit-level=moderate
    - npx jest --coverage --ci --forceExit
  rules:
    - if: $CI_COMMIT_BRANCH == "main"
    - if: $CI_PIPELINE_SOURCE == "merge_request_event"
build:
  image: node:20-alpine
  stage: build
  needs:
    - job: unit-tests
  timeout: 15 minutes
  cache:
    key: $CI_COMMIT_REF_SLUG
    paths:
      - ~/.npm
    policy: pull-push
  script:
    - npm ci
    - npm run build
  rules:
    - if: $CI_COMMIT_BRANCH == "main"
    - if: $CI_PIPELINE_SOURCE == "merge_request_event"
publish-npm:
  image: node:20-alpine
  stage: publish
  needs:
    - job: build
  timeout: 10 minutes
  cache:
    key: $CI_COMMIT_REF_SLUG
    paths:
      - ~/.npm
    policy: pull-push
  script:
    - npm ci
    - npm publish
  rules:
    - if: github.ref_type == 'tag'
"
`;

exports[`GitlabCiRenderer snapshots > renders python-fastapi 1`] = `
"# Generated by pipeline-gen — https://github.com/NickSanft/pipeline-gen
# Do not edit manually. Re-run \`pipeline-gen generate\` to update.
stages:
  - lint
  - test
  - build
lint:
  image: python:3.12-slim
  stage: lint
  timeout: 10 minutes
  script:
    - gitleaks detect --source=. --exit-code=1 --no-git
    - pip install ruff
    - ruff check . && ruff format --check .
  rules:
    - if: $CI_COMMIT_BRANCH == "main"
    - if: $CI_PIPELINE_SOURCE == "merge_request_event"
unit-tests:
  image: python:\${PYTHON_VERSION}-slim
  stage: test
  needs:
    - job: lint
  timeout: 20 minutes
  parallel:
    matrix:
      - PYTHON_VERSION:
          - "3.10"
          - "3.11"
          - "3.12"
  cache:
    key: $CI_COMMIT_REF_SLUG
    paths:
      - ~/.cache/pip
    policy: pull-push
  script:
    - pip install -e ".[dev]"
    - pytest --cov --cov-report=xml -v
  rules:
    - if: $CI_COMMIT_BRANCH == "main"
    - if: $CI_PIPELINE_SOURCE == "merge_request_event"
build-wheel:
  image: python:3.12-slim
  stage: build
  needs:
    - job: unit-tests
  timeout: 10 minutes
  script:
    - pip install hatch
    - hatch build
  rules:
    - if: $CI_COMMIT_BRANCH == "main"
    - if: $CI_PIPELINE_SOURCE == "merge_request_event"
"
`;
